# cmake-init-shared-static

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README_8md.html  about.html  about_8dox.html  annotated.html  classexported__class.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_6845d4c7af1a0a99add50de30b674562.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespaces.html  pages.html  searchdata-v1.js  searchdata-v2.js  shared_8h.html  shared_8hpp.html
.github/workflows/: ci.yml
cmake/: install-rules.cmake  sharedConfig.cmake  variables.cmake
include/shared/: shared.h  shared.hpp
source/: shared.cpp
test/: CMakeLists.txt
test/source/: shared_test.cpp
